--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -1,3 +1,75 @@
+/* nunito-regular - cyrillic */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/nunito-v16-cyrillic-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/nunito-v16-cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v16-cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v16-cyrillic-regular.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+/* nunito-600 - cyrillic */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/nunito-v16-cyrillic-600.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/nunito-v16-cyrillic-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v16-cyrillic-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-600.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v16-cyrillic-600.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+/* nunito-700 - cyrillic */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/nunito-v16-cyrillic-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/nunito-v16-cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v16-cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v16-cyrillic-700.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+/* nunito-800 - cyrillic */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../fonts/nunito-v16-cyrillic-800.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/nunito-v16-cyrillic-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v16-cyrillic-800.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-800.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v16-cyrillic-800.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v16-cyrillic-800.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+
 body{
 	background-color: #F4E9DC;
+	font-family: 'Nunito';
+}
+
+body a, body p{
+	color: #494949;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 140.62%;
+}
+
+/*----------------------- nav -----------------------*/
+nav a{
+	font-weight: 700;
+	letter-spacing: -0.02em;
+
+}
+
+nav > a{
+	font-weight: 800;
 }
