--- a/layout/index.html
+++ b/layout/index.html
@@ -15,38 +15,68 @@
 	<title>Информбюро</title>
 </head>
 <body>
-	
-	<head>
-		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand" href="#">Бюро облачных решений</a>
-			
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+	<header class = "container">
+		<nav class="navbar navbar-expand-lg navbar-light">
+			<div class="container-fluid">
+		    	
+		    	<a class="navbar-brand" href="#">
+		    		<div class="round d-inline-block align-center"></div>
+		    		Бюро облачных решений
+		    	</a>
+		    
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+			    </button>
+		    
+			    <div class="collapse navbar-collapse justify-content-end align-items-end" id="navbarSupportedContent">
+			    	
+			    	<!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
+			    	<ul class="navbar-nav mb-2 mb-lg-0">
+			        
+				      	<li class="nav-item">
+							<a class="nav-link" href="#">Услуги и продукты</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Аренда программ</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Вопросы и ответы</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">О компании</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Контакты</a>
+						</li>
+			      	</ul>
 
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link .ib-nav-link" href="#">Услуги и продукты</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link .ib-nav-link" href="#">Аренда программ</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Вопросы и ответы</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">О компании</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Контакты</a>
-					</li>
-				</ul>
+				</div>
+
 			</div>
 		</nav>
-	</head>
+	</header>
 
-	<main></main>
+
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5">
+					<p>мы предлагаем</p>
+					<p>Внедрение и сопровождение продуктов 1С</p>
+					<button>
+						<p>Заказать звонок</p>
+					</button>
+				</div>
+
+				<div class="col-md-7">
+					<img src="img/fl1.png" alt="" class="img">
+				</div>
+					
+			</div>
+		</div>
+	</main>
+
+
 	<footer></footer>
 
 
